# storeDrf

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  models.py  serializers.py  settings.py  urls.py
store/management/commands/: mock_store.py
store/migrations/: 0001_initial.py  0002_remove_order_shipping_order_shipping_price.py  0003_remove_order_is_cart_remove_order_option_and_more.py  0004_rename_shipping_price_order_shipping_fee_and_more.py  0005_purchase_shipping_fee.py  0006_option_is_sold_out_alter_cart_user_alter_order_user_and_more.py
store/queries/: cart.py  option.py  order.py  product.py  purchase.py
store/tests/: test_api.py  test_cart_api.py  test_model.py  test_order_api.py  test_product_api.py
store/views/: cart.py  option.py  order.py  product.py
user/: admin.py  models.py  serialisers.py  urls.py  views.py
user/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
